src-tauri/tests/snapshots/ipc_contract__privacy_intent_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "intent_type": "trade",
  "payload": "{\"action\":\"buy\"}",
  "encrypted": true,
  "relay_path": [
    "origin_node"
  ],
  "relay_fee": "0.005 AVAX"
}
