src-tauri/tests/snapshots/ipc_contract__proof_request_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "balance": 1000,
  "bid_amount": 95,
  "price_ceiling": 100
}
