src-tauri/tests/snapshots/ipc_contract__queued_tx_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "id": "q-8a3f",
  "raw_tx_hex": "0x02f8",
  "summary": "Escrow release",
  "created_at": "2026-05-18T14:32:00Z",
  "status": "queued",
  "tx_hash": null,
  "reason": null
}
