src-tauri/tests/snapshots/ipc_contract__relayed_tx_record_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "summary": "Escrow release",
  "tx_hash": "0xc70d",
  "reward_avax": "0.005",
  "relayed_at": "2026-05-18T14:32:00Z"
}
