src-tauri/tests/snapshots/ipc_contract__zk_proof_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "proof": "0xa4f2c9e1b70d5533",
  "public_inputs": [
    "95"
  ],
  "encrypted_intent": "{\"bid\":95,\"verified\":true}"
}
